# shubham

./: .bash_history  .gitconfig  .python_history  .wget-hsts
DrNilakshiJain-main/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
DrNilakshiJain-main/config/: nilakshijain.com
DrNilakshiJain-main/inbiohtml-105/documentation/: index.html
DrNilakshiJain-main/inbiohtml-105/documentation/js/: main.js
DrNilakshiJain-main/nilakshijain/: db.sqlite3  manage.py  nohup.out
DrNilakshiJain-main/nilakshijain/main/: admin.py  models.py  urls.py
DrNilakshiJain-main/nilakshijain/main/migrations/: 0001_initial.py  0002_remove_project_link_remove_project_name_project_data.py  0003_remove_publication_name_publication_data.py  0004_rename_title_copyright_data_copyright_link.py  0005_rename_youtube_embed_link_webinar_youtube_embed_code_and_more.py  0006_bookreviewed_curriculumdevelopment_internationaliv_and_more.py  0007_othermembershiptype_othermembership.py  0008_researchgrant.py  0009_alter_book_picture_extra.py  0010_alter_bookaccomplishment_point.py  0011_slideshow.py  0012_rename_img_slideshow_img_rename_img1_slideshow_img1_and_more.py  0013_slideshow_title.py  0014_alter_slideshow_img_alter_slideshow_img1_and_more.py  0015_remove_slideshow_img1_remove_slideshow_img2_and_more.py  0016_slideshow_img1_slideshow_img2_slideshow_img3_and_more.py  0017_alter_slideshow_img_alter_slideshow_img1_and_more.py  0023_home.py  (+12 more)
DrNilakshiJain-main/nilakshijain/nilakshijain/: asgi.py  settings.py  urls.py  wsgi.py
DrNilakshiJain-main/nilakshijain/templates/: book-info.html
(+218 files in other folders)
