[tool.poetry]
name = "drnilakshijain"
version = "0.1.0"
description = ""
authors = ["Mustansir Godhrawala <me@mustansirg.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-rest-framework = "^0.1.0"
pillow = "^9.3.0"
django-analytics = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
